<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/friend_menu"
        android:title="@string/friends"
        android:icon="@drawable/ic_friends_black_24dp"/>

    <item
        android:id="@+id/chat_menu"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat_black_24dp"/>

    <item
        android:id="@+id/timeline_menu"
        android:title="@string/timeline"
        android:icon="@drawable/ic_timeline_black_24dp"/>
    <item
        android:id="@+id/account_menu"
        android:title="@string/account"
        android:icon="@drawable/ic_account_black_24dp"/>
    <item
        android:id="@+id/more_menu"
        android:title="@string/more"
        android:icon="@drawable/ic_more_black_24dp"/>
</menu>