<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logoapp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_friends_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_profile"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/txt_friends_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_profile"/>
            <TextView
                android:id="@+id/txt_friends_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobs_profile"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>