<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding"
    android:background="@color/colorRoyalBlue"
    tools:context=".FrontApp.SplashScreen">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logoapp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txt_splashscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorEbonyClay"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/txt_splashscreen_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splashsreen_quote"
            android:textColor="@color/colorEbonyClay"
            android:textSize="12sp"
            android:layout_above="@id/txt_splashscreen_quote_person"
            />
        <TextView
            android:id="@+id/txt_splashscreen_quote_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splashsreen_quote_person"
            android:textColor="@color/colorEbonyClay"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>


</LinearLayout>