<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical">
    <!--Profile Account-->
    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
                android:id="@+id/img_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/logoapp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                    android:id="@+id/txt_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_profile"
                    android:textSize="20sp"/>
            <TextView
                android:id="@+id/txt_profile_jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobs_profile"/>
            <TextView
                    android:id="@+id/txt_profile_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_profile"/>
            <Button
                android:id="@+id/btn_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorChardonnay"
                android:text="@string/edit_profile"
                android:layout_marginBottom="8dp"/>
            <Button
                android:id="@+id/btn_logout_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_account"
                android:background="@color/colorChardonnay"/>
        </LinearLayout>
    </LinearLayout>

    <!--Experience Profile-->
    <TextView
        android:id="@+id/txt_personal_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_experience"
        android:layout_below="@+id/linear_profile"/>
    <ScrollView
        android:id="@+id/scroll_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_personal_experience"
        android:scrollbars="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_experience1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro1"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_experience2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro1"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_experience3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro1"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_experience4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro1"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <!--Skill Profile-->
    <TextView
        android:id="@+id/txt_personal_skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Personal Skill"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/scroll_experience"/>
    <ScrollView
        android:id="@+id/scroll_skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_personal_skill"
        android:scrollbars="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_skill1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro2"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_skill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro2"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_skill3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro2"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_skill4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro2"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <!--Awarding and Certification Profile-->
    <TextView
        android:id="@+id/txt_personal_awarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_awarding_and_certification"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/scroll_skill"
        />
    <ScrollView
        android:id="@+id/scroll_awarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_personal_awarding"
        android:scrollbars="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_awarding1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro3"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_awarding2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro3"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_awardig3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro3"
                android:layout_marginEnd="10dp"
                />
            <ImageView
                android:id="@+id/img_awarding4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intro3"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_account_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_awarding"
        android:text="@string/logout"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@drawable/roun_rect_royalblue"
        android:layout_marginTop="10dp"/>

</RelativeLayout>